Implement numeric converters, remove numeric primitive type usages